add-exports option